deploy/010-Vnet/azdeploy-vnet.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
	"virtualNetwork_vnet_name": {
	  "type": "String"
	},
	"virtualNetwork_vnet_address_prefix": {
	  "type": "string"
	},
	"virtualNetwork_bastion_subnet_name": {
	  "type": "string"
	},
	"virtualNetwork_bastion_subnet_address_prefix": {
	  "type": "string"
	},
	"virtualNetwork_app_subnet_name": {
	  "type": "string"
	},
	"virtualNetwork_app_subnet_address_prefix": {
	  "type": "string"
	},
	"virtualNetwork_data_subnet_name": {
	  "type": "string"
	},
	"virtualNetwork_data_subnet_address_prefix": {
	  "type": "string"
	},
	"virtualNetwork_gateway_subnet_name": {
	  "type": "string"
	},
	"virtualNetwork_gateway_subnet_address_prefix": {
	  "type": "string"
	},
	"virtualNetwork_default_subnet_name": {
	  "type": "string"
	},
	"virtualNetwork_default_subnet_address_prefix": {
	  "type": "string"
	},
	"bastion_Deploy": {
		"type": "bool"
	},
	"bastion_HostName": {
	  "type": "string"
	}

  },
  "variables": {
	"networkSecurityGroups_appsubnet_name": "[concat('nsg-', parameters('virtualNetwork_app_subnet_name'))]",
	"networkSecurityGroups_datasubnet_name": "[concat('nsg-', parameters('virtualNetwork_data_subnet_name'))]",
	"networkSecurityGroups_bastionsubnet_name": "[concat('nsg-', parameters('virtualNetwork_bastion_subnet_name'))]",
	"location": "[resourceGroup().location]",
	"publicIpAddressName_Bastion": "[format('pip-{0}', parameters('bastion_HostName'))]"
  },
  "resources": [
	{
	  "type": "Microsoft.Network/publicIPAddresses",
	  "apiVersion": "2022-07-01",
	  "condition": "[parameters('bastion_Deploy')]",
	  "name": "[variables('publicIpAddressName_Bastion')]",
	  "location": "[variables('location')]",
	  "sku": {
		"name": "Standard"
	  },
	  "properties": {
		"publicIPAllocationMethod": "Static"
	  }
	},
	{
	  "type": "Microsoft.Network/networkSecurityGroups",
	  "apiVersion": "2022-07-01",
	  "name": "[variables('networkSecurityGroups_datasubnet_name')]",
	  "location": "[variables('location')]",
	  "properties": {
		"securityRules": [
		  {
			"name": "RDP_Port_3389",
			"properties": {
			  "protocol": "TCP",
			  "sourcePortRange": "*",
			  "destinationPortRange": "3389",
			  "sourceAddressPrefix": "*",
			  "destinationAddressPrefix": "[parameters('virtualNetwork_data_subnet_address_prefix')]",
			  "access": "Allow",
			  "priority": 300,
			  "direction": "Inbound",
			  "sourcePortRanges": [],
			  "destinationPortRanges": [],
			  "sourceAddressPrefixes": [],
			  "destinationAddressPrefixes": []
			}
		  },
		  {
			"name": "HTTPS_Port_443",
			"properties": {
			  "protocol": "TCP",
			  "sourcePortRange": "*",
			  "destinationPortRange": "443",
			  "sourceAddressPrefix": "*",
			  "destinationAddressPrefix": "[parameters('virtualNetwork_data_subnet_address_prefix')]",
			  "access": "Allow",
			  "priority": 310,
			  "direction": "Inbound",
			  "sourcePortRanges": [],
			  "destinationPortRanges": [],
			  "sourceAddressPrefixes": [],
			  "destinationAddressPrefixes": []
			}
		  }
		]
	  }
	},
	{
	  "type": "Microsoft.Network/networkSecurityGroups",
	  "apiVersion": "2022-07-01",
	  "name": "[variables('networkSecurityGroups_appsubnet_name')]",
	  "location": "[variables('location')]",
	  "properties": {
		"securityRules": [           // these service tags required for Synapse Private Link Hub to work
		  {
			"name": "ARM-ServiceTag",
			"properties": {
			  "protocol": "TCP",
			  "sourcePortRange": "*",
			  "destinationPortRange": "443",
			  "sourceAddressPrefix": "*",
			  "destinationAddressPrefix": "AzureResourceManager",
			  "access": "Allow",
			  "priority": 3000,
			  "direction": "Outbound",
			  "sourcePortRanges": [],
			  "destinationPortRanges": [],
			  "sourceAddressPrefixes": [],
			  "destinationAddressPrefixes": []
			}
		  },
		  {
			"name": "FrontDoor-ServiceTag",
			"properties": {
			  "protocol": "TCP",
			  "sourcePortRange": "*",
			  "destinationPortRange": "443",
			  "sourceAddressPrefix": "*",
			  "destinationAddressPrefix": "AzureFrontDoor.Frontend",
			  "access": "Allow",
			  "priority": 3010,
			  "direction": "Outbound",
			  "sourcePortRanges": [],
			  "destinationPortRanges": [],
			  "sourceAddressPrefixes": [],
			  "destinationAddressPrefixes": []
			}
		  },
		  {
			"name": "AAD-ServiceTag",
			"properties": {
			  "protocol": "TCP",
			  "sourcePortRange": "*",
			  "destinationPortRange": "443",
			  "sourceAddressPrefix": "*",
			  "destinationAddressPrefix": "AzureActiveDirectory",
			  "access": "Allow",
			  "priority": 3020,
			  "direction": "Outbound",
			  "sourcePortRanges": [],
			  "destinationPortRanges": [],
			  "sourceAddressPrefixes": [],
			  "destinationAddressPrefixes": []
			}
		  },
		  {
			"name": "Monitor-ServiceTag",
			"properties": {
			  "protocol": "TCP",
			  "sourcePortRange": "*",
			  "destinationPortRange": "443",
			  "sourceAddressPrefix": "*",
			  "destinationAddressPrefix": "AzureMonitor",
			  "access": "Allow",
			  "priority": 3030,
			  "direction": "Outbound",
			  "sourcePortRanges": [],
			  "destinationPortRanges": [],
			  "sourceAddressPrefixes": [],
			  "destinationAddressPrefixes": []
			}
		  },
		  {
			"name": "RDP",              // only need this if you have a jumpbox in this subnet
			"properties": {
			  "protocol": "TCP",
			  "sourcePortRange": "*",
			  "destinationPortRange": "3389",
			  "sourceAddressPrefix": "*",
			  "destinationAddressPrefix": "[parameters('virtualNetwork_app_subnet_address_prefix')]",
			  "access": "Allow",
			  "priority": 300,
			  "direction": "Inbound",
			  "sourcePortRanges": [],
			  "destinationPortRanges": [],
			  "sourceAddressPrefixes": [],
			  "destinationAddressPrefixes": []
			}
		  },
		  {
			"name": "Port_1433",         // only need this if you have a VM with SQL in this subnet
			"properties": {
			  "protocol": "*",
			  "sourcePortRange": "*",
			  "destinationPortRange": "1433",
			  "sourceAddressPrefix": "Sql",
			  "destinationAddressPrefix": "VirtualNetwork",
			  "access": "Allow",
			  "priority": 310,
			  "direction": "Inbound",
			  "sourcePortRanges": [],
			  "destinationPortRanges": [],
			  "sourceAddressPrefixes": [],
			  "destinationAddressPrefixes": []
			}
		  }
		]
	  }
	},
	{
	  "type": "Microsoft.Network/networkSecurityGroups",
	  "apiVersion": "2022-07-01",
	  "condition": "[parameters('bastion_Deploy')]",
	  "name": "[variables('networkSecurityGroups_bastionsubnet_name')]",
	  "location": "[variables('location')]",
	  "properties": {
		"securityRules": [
		  {
			"name": "AllowHttpsInBound",
			"properties": {
			  "protocol": "Tcp",
			  "sourcePortRange": "*",
			  "sourceAddressPrefix": "Internet",
			  "destinationPortRange": "443",
			  "destinationAddressPrefix": "*",
			  "access": "Allow",
			  "priority": 100,
			  "direction": "Inbound"
			}
		  },
		  {
			"name": "AllowGatewayManagerInBound",
			"properties": {
			  "protocol": "Tcp",
			  "sourcePortRange": "*",
			  "sourceAddressPrefix": "GatewayManager",
			  "destinationPortRange": "443",
			  "destinationAddressPrefix": "*",
			  "access": "Allow",
			  "priority": 110,
			  "direction": "Inbound"
			}
		  },
		  {
			"name": "AllowLoadBalancerInBound",
			"properties": {
			  "protocol": "Tcp",
			  "sourcePortRange": "*",
			  "sourceAddressPrefix": "AzureLoadBalancer",
			  "destinationPortRange": "443",
			  "destinationAddressPrefix": "*",
			  "access": "Allow",
			  "priority": 120,
			  "direction": "Inbound"
			}
		  },
		  {
			"name": "AllowBastionHostCommunicationInBound",
			"properties": {
			  "protocol": "*",
			  "sourcePortRange": "*",
			  "sourceAddressPrefix": "VirtualNetwork",
			  "destinationPortRanges": [
				"8080",
				"5701"
			  ],
			  "destinationAddressPrefix": "VirtualNetwork",
			  "access": "Allow",
			  "priority": 130,
			  "direction": "Inbound"
			}
		  },
		  {
			"name": "DenyAllInBound",
			"properties": {
			  "protocol": "*",
			  "sourcePortRange": "*",
			  "sourceAddressPrefix": "*",
			  "destinationPortRange": "*",
			  "destinationAddressPrefix": "*",
			  "access": "Deny",
			  "priority": 1000,
			  "direction": "Inbound"
			}
		  },
		  {
			"name": "AllowSshRdpOutBound",
			"properties": {
			  "protocol": "Tcp",
			  "sourcePortRange": "*",
			  "sourceAddressPrefix": "*",
			  "destinationPortRanges": [
				"22",
				"3389"
			  ],
			  "destinationAddressPrefix": "VirtualNetwork",
			  "access": "Allow",
			  "priority": 100,
			  "direction": "Outbound"
			}
		  },
		  {
			"name": "AllowAzureCloudCommunicationOutBound",
			"properties": {
			  "protocol": "Tcp",
			  "sourcePortRange": "*",
			  "sourceAddressPrefix": "*",
			  "destinationPortRange": "443",
			  "destinationAddressPrefix": "AzureCloud",
			  "access": "Allow",
			  "priority": 110,
			  "direction": "Outbound"
			}
		  },
		  {
			"name": "AllowBastionHostCommunicationOutBound",
			"properties": {
			  "protocol": "*",
			  "sourcePortRange": "*",
			  "sourceAddressPrefix": "VirtualNetwork",
			  "destinationPortRanges": [
				"8080",
				"5701"
			  ],
			  "destinationAddressPrefix": "VirtualNetwork",
			  "access": "Allow",
			  "priority": 120,
			  "direction": "Outbound"
			}
		  },
		  {
			"name": "AllowGetSessionInformationOutBound",
			"properties": {
			  "protocol": "*",
			  "sourcePortRange": "*",
			  "sourceAddressPrefix": "*",
			  "destinationAddressPrefix": "Internet",
			  "destinationPortRanges": [
				"80",
				"443"
			  ],
			  "access": "Allow",
			  "priority": 130,
			  "direction": "Outbound"
			}
		  },
		  {
			"name": "DenyAllOutBound",
			"properties": {
			  "protocol": "*",
			  "sourcePortRange": "*",
			  "destinationPortRange": "*",
			  "sourceAddressPrefix": "*",
			  "destinationAddressPrefix": "*",
			  "access": "Deny",
			  "priority": 1000,
			  "direction": "Outbound"
			}
		  }
		]
	  }
	},
	{
	  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
	  "apiVersion": "2020-05-01",
	  "name": "[concat(variables('networkSecurityGroups_appsubnet_name'), '/Port_1433')]",
	  "dependsOn": [
		"[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_appsubnet_name'))]"
	  ],
	  "properties": {
		"protocol": "*",
		"sourcePortRange": "*",
		"destinationPortRange": "1433",
		"sourceAddressPrefix": "Sql",
		"destinationAddressPrefix": "VirtualNetwork",
		"access": "Allow",
		"priority": 310,
		"direction": "Inbound",
		"sourcePortRanges": [],
		"destinationPortRanges": [],
		"sourceAddressPrefixes": [],
		"destinationAddressPrefixes": []
	  }
	},
	{
	  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
	  "apiVersion": "2020-05-01",
	  "name": "[concat(variables('networkSecurityGroups_appsubnet_name'), '/RDP')]",
	  "dependsOn": [
		"[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_appsubnet_name'))]"
	  ],
	  "properties": {
		"protocol": "TCP",
		"sourcePortRange": "*",
		"destinationPortRange": "3389",
		"sourceAddressPrefix": "*",
		"destinationAddressPrefix": "[parameters('virtualNetwork_app_subnet_address_prefix')]",
		"access": "Allow",
		"priority": 300,
		"direction": "Inbound",
		"sourcePortRanges": [],
		"destinationPortRanges": [],
		"sourceAddressPrefixes": [],
		"destinationAddressPrefixes": []
	  }
	},
	{
	  "type": "Microsoft.Network/virtualNetworks",
	  "apiVersion": "2020-05-01",
	  "name": "[parameters('virtualNetwork_vnet_name')]",
	  "location": "[variables('location')]",
	  "dependsOn": [
		"[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_appsubnet_name'))]",
		"[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_datasubnet_name'))]"
	  ],
	  "properties": {
		"addressSpace": {
		  "addressPrefixes": [
			"[parameters('virtualNetwork_vnet_address_prefix')]"
		  ]
		},
		"subnets": [
		  {
			"name": "[parameters('virtualNetwork_default_subnet_name')]",
			"properties": {
			  "addressPrefix": "[parameters('virtualNetwork_default_subnet_address_prefix')]",
			  "delegations": [],
			  "privateEndpointNetworkPolicies": "Enabled",
			  "privateLinkServiceNetworkPolicies": "Enabled"
			}
		  },
		  {
			"name": "[parameters('virtualNetwork_gateway_subnet_name')]",
			"properties": {
			  "addressPrefix": "[parameters('virtualNetwork_gateway_subnet_address_prefix')]",
			  "serviceEndpoints": [],
			  "delegations": [],
			  "privateEndpointNetworkPolicies": "Enabled",
			  "privateLinkServiceNetworkPolicies": "Enabled"
			}
		  },
		  {
			"name": "[parameters('virtualNetwork_app_subnet_name')]",
			"properties": {
			  "addressPrefix": "[parameters('virtualNetwork_app_subnet_address_prefix')]",
			  "networkSecurityGroup": {
				"id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_appsubnet_name'))]"
			  },
			  "serviceEndpoints": [
				{
				  "service": "Microsoft.Storage"     // this will be needed to allow ADLS storage to be exposed to the app subnet
				}
			  ],
			  "delegations": [],
			  "privateEndpointNetworkPolicies": "Disabled",
			  "privateLinkServiceNetworkPolicies": "Enabled"
			}
		  },
		  {
			"name": "[parameters('virtualNetwork_bastion_subnet_name')]",
			"properties": {
			  "addressPrefix": "[parameters('virtualNetwork_bastion_subnet_address_prefix')]",
			  "networkSecurityGroup": {
				"id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_appsubnet_name'))]"
			  },
			  "serviceEndpoints": [
				{
				  "service": "Microsoft.Storage"     // this will be needed to allow ADLS storage to be exposed to the app subnet
				}
			  ],
			  "delegations": [],
			  "privateEndpointNetworkPolicies": "Disabled",
			  "privateLinkServiceNetworkPolicies": "Enabled"
			}
		  },
		  {
			"name": "[parameters('virtualNetwork_data_subnet_name')]",
			"properties": {
			  "addressPrefix": "[parameters('virtualNetwork_data_subnet_address_prefix')]",
			  "networkSecurityGroup": {
				"id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_datasubnet_name'))]"
			  },
			  "serviceEndpoints": [],
			  "delegations": [],
			  "privateEndpointNetworkPolicies": "Disabled",
			  "privateLinkServiceNetworkPolicies": "Enabled"
			}
		  }
		],
		"virtualNetworkPeerings": [],
		"enableDdosProtection": false,
		"enableVmProtection": false
	  }
	},
	{
	  "type": "Microsoft.Network/virtualNetworks/subnets",
	  "apiVersion": "2020-05-01",
	  "name": "[concat(parameters('virtualNetwork_vnet_name'), '/', parameters('virtualNetwork_default_subnet_name'))]",
	  "dependsOn": [
		"[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetwork_vnet_name'))]"
	  ],
	  "properties": {
		"addressPrefix": "[parameters('virtualNetwork_default_subnet_address_prefix')]",
		"delegations": [],
		"privateEndpointNetworkPolicies": "Enabled",
		"privateLinkServiceNetworkPolicies": "Enabled"
	  }
	},
	{
	  "type": "Microsoft.Network/virtualNetworks/subnets",
	  "apiVersion": "2020-05-01",
	  "name": "[concat(parameters('virtualNetwork_vnet_name'), '/', parameters('virtualNetwork_gateway_subnet_name'))]",
	  "dependsOn": [
		"[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetwork_vnet_name'))]"
	  ],
	  "properties": {
		"addressPrefix": "[parameters('virtualNetwork_gateway_subnet_address_prefix')]",
		"serviceEndpoints": [],
		"delegations": [],
		"privateEndpointNetworkPolicies": "Enabled",
		"privateLinkServiceNetworkPolicies": "Enabled"
	  }
	},
	{
	  "type": "Microsoft.Network/virtualNetworks/subnets",
	  "apiVersion": "2020-05-01",
	  "name": "[concat(parameters('virtualNetwork_vnet_name'), '/',parameters('virtualNetwork_app_subnet_name'))]",
	  "dependsOn": [
		"[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetwork_vnet_name'))]",
		"[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_appsubnet_name'))]"
	  ],
	  "properties": {
		"addressPrefix": "[parameters('virtualNetwork_app_subnet_address_prefix')]",
		"networkSecurityGroup": {
		  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_appsubnet_name'))]"
		},
		"delegations": [],
		"privateEndpointNetworkPolicies": "Disabled",
		"privateLinkServiceNetworkPolicies": "Enabled"
	  }
	},
	{
	  "type": "Microsoft.Network/virtualNetworks/subnets",
	  "apiVersion": "2020-05-01",
	  "name": "[concat(parameters('virtualNetwork_vnet_name'), '/',parameters('virtualNetwork_data_subnet_name'))]",
	  "dependsOn": [
		"[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetwork_vnet_name'))]",
		"[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_datasubnet_name'))]"
	  ],
	  "properties": {
		"addressPrefix": "[parameters('virtualNetwork_data_subnet_address_prefix')]",
		"networkSecurityGroup": {
		  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_datasubnet_name'))]"
		},
		"serviceEndpoints": [],
		"delegations": [],
		"privateEndpointNetworkPolicies": "Disabled",
		"privateLinkServiceNetworkPolicies": "Enabled"
	  }
	},
	{
	  "type": "Microsoft.Network/virtualNetworks/subnets",
	  "apiVersion": "2020-05-01",
  	  "condition": "[parameters('bastion_Deploy')]",
	  "name": "[concat(parameters('virtualNetwork_vnet_name'), '/',parameters('virtualNetwork_bastion_subnet_name'))]",
	  "dependsOn": [
		"[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetwork_vnet_name'))]",
		"[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_bastionsubnet_name'))]"
	  ],
	  "properties": {
		"addressPrefix": "[parameters('virtualNetwork_bastion_subnet_address_prefix')]",
		"networkSecurityGroup": {
		  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroups_bastionsubnet_name'))]"
		},
		"serviceEndpoints": [],
		"delegations": [],
		"privateEndpointNetworkPolicies": "Disabled",
		"privateLinkServiceNetworkPolicies": "Enabled"
	  }
	},
	{
	  "type": "Microsoft.Network/bastionHosts",
	  "apiVersion": "2022-07-01",
	  "condition": "[parameters('bastion_Deploy')]",
	  "name": "[parameters('bastion_HostName')]",
	  "location": "[variables('location')]",
	  "properties": {
		"ipConfigurations": [
		  {
			"name": "IpConf",
			"properties": {
			  "subnet": {
				"id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetwork_vnet_name'), parameters('virtualNetwork_bastion_subnet_name'))]"
			  },
			  "publicIPAddress": {
				"id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIpAddressName_Bastion'))]"
			  }
			}
		  }
		]
	  },
	  "dependsOn": [
		"[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetwork_vnet_name'))]",
		"[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIpAddressName_Bastion'))]",
		"[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetwork_vnet_name'), parameters('virtualNetwork_bastion_subnet_name'))]"
	  ]
	}
  ],
  "outputs": {
	"resourceGroupName": {
	  "type": "string",
	  "value": "[resourceGroup().name]"
	},
	"resourceGroupID": {
	  "type": "string",
	  "value": "[resourceGroup().id]"
	},
	"resourceGroupLocation": {
	  "type": "string",
	  "value": "[resourceGroup().location]"
	},
	"virtualNetwork_vnet_name": {
	  "type": "string",
	  "value": "[parameters('virtualNetwork_vnet_name')]"
	},
	"virtualNetwork_vnet_address_prefix": {
	  "type": "string",
	  "value": "[parameters('virtualNetwork_vnet_address_prefix')]"
	},
	"virtualNetwork_app_subnet_name": {
	  "type": "string",
	  "value": "[parameters('virtualNetwork_app_subnet_name')]"
	},
	"virtualNetwork_data_subnet_name": {
	  "type": "string",
	  "value": "[parameters('virtualNetwork_data_subnet_name')]"
	},
	"virtualNetwork_bastion_subnet_name": {
	  "type": "string",
	  "value": "[parameters('virtualNetwork_bastion_subnet_name')]"
	}
  }
}
